# Test-task-RADAR

./: README.md
CSVTESTER/: CMakeLists.txt  CSVReader.sln
CSVTESTER/CSVTESTER/: CMakeLists.txt  CSVTESTER.vcxproj  CSVTESTER.vcxproj.filters  CSVTable.cpp  CSVTable.h  FormulaEvaluator.cpp  FormulaEvaluator.h  main.cpp
CSVTESTER/CSVTESTER/x64/Debug/: CSVReader.exe.recipe  CSVReader.ilk  CSVTESTER.exe.recipe  vc143.idb
CSVTESTER/CSVTESTER/x64/Debug/CSVReader.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CSVReader.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CSVTESTER/CSVTESTER/x64/Debug/CSVTESTER.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CSVTESTER.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CSVTESTER/CSVTests/: CMakeLists.txt  CSVTests.vcxproj  test.cpp
CSVTESTER/CSVTests/x64/Debug/: CSVTests.exe.recipe  CSVTests.vcxproj.FileListAbsolute.txt
CSVTESTER/CSVTests/x64/Debug/CSVTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CSVTESTER/x64/Debug/: CSVTests.exe.gta.testdurations  test.csv  таблицаа.csv
